logs/dag_id=dag_with_postgres_operator/run_id=scheduled__2024-03-07T000000+0000/task_id=create_postgres_table/attempt=1.log
[2024-03-09T14:08:14.747+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator.create_postgres_table scheduled__2024-03-07T00:00:00+00:00 [queued]>
[2024-03-09T14:08:14.968+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator.create_postgres_table scheduled__2024-03-07T00:00:00+00:00 [queued]>
[2024-03-09T14:08:14.975+0000] {taskinstance.py:2193} INFO - Starting attempt 1 of 6
[2024-03-09T14:08:15.669+0000] {taskinstance.py:2214} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2024-03-07 00:00:00+00:00
[2024-03-09T14:08:15.716+0000] {standard_task_runner.py:60} INFO - Started process 2103 to run task
[2024-03-09T14:08:15.726+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator', 'create_postgres_table', 'scheduled__2024-03-07T00:00:00+00:00', '--job-id', '200', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpky3dw1cx']
[2024-03-09T14:08:15.765+0000] {standard_task_runner.py:88} INFO - Job 200: Subtask create_postgres_table
[2024-03-09T14:08:16.116+0000] {task_command.py:423} INFO - Running <TaskInstance: dag_with_postgres_operator.create_postgres_table scheduled__2024-03-07T00:00:00+00:00 [running]> on host 3b9d9f11e4f2
[2024-03-09T14:08:16.732+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='coder2j' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator' AIRFLOW_CTX_TASK_ID='create_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2024-03-07T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-03-07T00:00:00+00:00'
[2024-03-09T14:08:16.745+0000] {sql.py:276} INFO - Executing: create table if not exists dag_runs(
                    dt date,
                    dag_id character varying,
                    primary key (dt, dag_id);


                create table if not exists dag_runs2(
                    dt date,
                    dag_id character varying,
                    primary key (dt, dag_id);




        )
        
[2024-03-09T14:08:16.817+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-09T14:08:16.966+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-09T14:08:17.020+0000] {sql.py:457} INFO - Running statement: create table if not exists dag_runs(
                    dt date,
                    dag_id character varying,
                    primary key (dt, dag_id);


                create table if not exists dag_runs2(
                    dt date,
                    dag_id character varying,
                    primary key (dt, dag_id);




        )
        , parameters: None
[2024-03-09T14:08:17.039+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 4:                     primary key (dt, dag_id);
                                                    ^

[2024-03-09T14:08:17.068+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator, task_id=create_postgres_table, execution_date=20240307T000000, start_date=20240309T140814, end_date=20240309T140817
[2024-03-09T14:08:17.108+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 200 for task create_postgres_table (syntax error at or near ";"
LINE 4:                     primary key (dt, dag_id);
                                                    ^
; 2103)
[2024-03-09T14:08:17.149+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-03-09T14:08:17.205+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
